LibWebRTCCodecs, -Proxy create and communicate the RemoteVideoFrameProxy incorrectly https://bugs.webkit.org/show_bug.cgi?id=237083

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-24
Reviewed by Youenn Fablet.
Source/WebCore:

Add functions to set media sample ownership identity if the underlying object
supports the feature.

* platform/MediaSample.h:
(WebCore::MediaSample::setOwnershipIdentity):
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.h:
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
(WebCore::MediaSampleAVFObjC::setOwnershipIdentity):
* platform/graphics/cv/VideoFrameCV.h:
* platform/graphics/cv/VideoFrameCV.mm:
(WebCore::VideoFrameCV::setOwnershipIdentity):

Source/WebKit:

LibWebRTCCodecsProxy should not call RemoteVideoFrameObjectHeap::createVideoFrame,
the function should be removed. Instead, LibWebRTCCodecsProxy should construct a
write reference to insert the media sample -> remote proxy mapping. Then
the result of the insert, a new reference, should be sent as part of the
RemoteVideoFrameProxy::Properties to the WP. This way the sent reference is
constructed as expected. Previously the reference was correct but matched just
by selecting the constants currently used (0). This works towards being able
to remove RemoteVideoFrameObjectHeap::createVideoFrame.

Split the completedDecoding to two:
- completedDecoding used to send new RemoteVideoFrames
- completedDecodingCV to send CoreVideo specific RemoteVideoSample instances (which will
  removed eventually).

* GPUProcess/webrtc/LibWebRTCCodecsProxy.mm:
(WebKit::Function<void):
* WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:
(WebKit::LibWebRTCCodecs::completedDecoding):
(WebKit::LibWebRTCCodecs::completedDecodingCV):
* WebProcess/GPU/webrtc/LibWebRTCCodecs.h:
* WebProcess/GPU/webrtc/LibWebRTCCodecs.messages.in:


Canonical link: https://commits.webkit.org/247731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290423 268f45cc-cd09-0410-ab3c-d52691b4dbfc