Source/WebCore/platform/graphics/avfoundation/objc/MediaSampleAVFObjC.h
@@ -76,6 +76,8 @@ public:
     bool videoMirrored() const override { return m_mirrored; }
     WEBCORE_EXPORT uint32_t videoPixelFormat() const final;
     WEBCORE_EXPORT CVPixelBufferRef pixelBuffer() const final;
+    WEBCORE_EXPORT void setOwnershipIdentity(const ProcessIdentity&) final;
+
     CMSampleBufferRef sampleBuffer() const { return m_sample.get(); }
 
     bool isHomogeneous() const;
